--- a/data/styles.css
+++ b/data/styles.css
@@ -69,7 +69,17 @@
 ._文本段落 {
   text-align:left;
 }
+._流程形状 {
+}
 .line {
+}
+.text_field {
+  color:#000000;
+  text-align:left;
+}
+.droplist {
+  color:#000000;
+  text-align:left;
 }
 .sticky_1 {
   text-align:left;
